--- a/package.json
+++ b/package.json
@@ -1,39 +1,79 @@
 {
-  "name": "ribot",
+  "name": "RiBOT",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "build:base": "ng build --source-map=false --progress=false",
+    "build:predev": "yarn build:base --configuration=predev",
+    "build:develop": "yarn build:base --configuration=develop",
+    "build:preprod": "yarn build:base --configuration=preprod",
+    "build:production": "yarn build:base --configuration=production",
+    "test": "ng test",
+    "lint": "ng lint",
+    "lint:fix": "yarn run lint --fix",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.0",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/core": "~13.2.0",
-    "@angular/forms": "~13.2.0",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/router": "~13.2.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "15.0.3",
+    "@angular/cdk": "14.2.7",
+    "@angular/common": "15.0.3",
+    "@angular/compiler": "15.0.3",
+    "@angular/core": "15.0.3",
+    "@angular/forms": "15.0.3",
+    "@angular/material": "14.2.7",
+    "@angular/material-moment-adapter": "14.2.7",
+    "@angular/platform-browser": "15.0.3",
+    "@angular/platform-browser-dynamic": "15.0.3",
+    "@angular/router": "15.0.3",
+    "angular-in-memory-web-api": "0.13.0",
+    "flexboxgrid": "^6.3.1",
+    "jwthelper": "^0.0.4",
+    "mat-table-exporter": "10.2.4",
+    "moment": "^2.29.1",
+    "ngx-toastr": "14.2.1",
+    "rxjs": "7.5.2",
+    "screenfull": "^5.1.0",
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.2",
-    "@angular/cli": "~13.2.2",
-    "@angular/compiler-cli": "~13.2.0",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
+    "@angular-devkit/build-angular": "15.0.3",
+    "@angular-eslint/builder": "15.1.0",
+    "@angular-eslint/eslint-plugin": "15.1.0",
+    "@angular-eslint/eslint-plugin-template": "15.1.0",
+    "@angular-eslint/schematics": "15.1.0",
+    "@angular-eslint/template-parser": "15.1.0",
+    "@angular/cli": "15.0.3",
+    "@angular/compiler-cli": "15.0.3",
+    "@angular/localize": "15.0.3",
+    "@ng-matero/extensions": "13.0.1",
+    "@types/jasmine": "3.10.3",
+    "@types/jasminewd2": "2.0.10",
+    "@types/node": "17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsdoc": "37.6.1",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-unused-imports": "2.0.0",
+    "husky": "7.0.4",
+    "jasmine-core": "4.0.0",
+    "jasmine-spec-reporter": "7.0.0",
+    "karma": "6.3.10",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
+    "karma-coverage": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.2"
+    "karma-jasmine-html-reporter": "1.7.0",
+    "ngx-progressbar": "^6.1.1",
+    "prettier": "2.5.1",
+    "protractor": "~7.0.0",
+    "ts-node": "10.4.0",
+    "typescript": "4.8.4"
   }
 }
