--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,29 +4,40 @@
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2017",
+    "target": "ES2022",
     "module": "es2020",
     "lib": [
-      "es2020",
+      "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@UIS-common/*": [
+        "src/app/UIS-common/*"
+      ],
+      "@UIS-common/": [
+        "src/app/UIS-common/index.ts"
+      ],
+      "@models/*": [
+        "src/app/models/*"
+      ],
+      "@models/": [
+        "src/app/models/index.ts"
+      ],
+      "@services/*": [
+        "src/app/services/*"
+      ],
+      "@services/": [
+        "src/app/services/index.ts"
+      ]
+    },
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false,
-    "strictInjectionParameters": true,
-    "strictInputAccessModifiers": true,
-    "strictTemplates": true
   }
 }
